Rebrand to Radiance and add optional OpenBao secret backend
Renames the codebase from the placeholder com.example.chat to
ai.intellistream.radiance, updates every external surface that
carried the "chat" name (Postgres database radiance_chat, Postgres
role radiance, Keycloak realm + client radiance, internal
config namespace radiance.*, env-var defaults RADIANCE_*).

Adds an opt-in Vault / OpenBao KV-v2 secret backend for
Postgres credentials, the Keycloak client_id/secret, and the
issuer URI. Off by default — when RADIANCE_VAULT_ENABLED is
unset or false, the existing env-var → application.yml chain
handles credentials with no Vault dependency at runtime. When
enabled, a META-INF/spring.factories-registered
EnvironmentPostProcessor fetches secret/data/<path> from Vault
via Spring 7's RestClient and injects the values as a
high-priority MapPropertySource before any auto-configuration
reads them. Direct HTTP rather than spring-vault-core because
the upstream library targets Spring 6 and trips on Spring 7's
pruned RestTemplate constructors.

Includes a profile-gated openbao service in docker-compose
(podman compose --profile openbao up -d) and a curl-based
scripts/seed-vault.sh for dev-mode seeding. Test coverage:
4 unit tests on the property mapping table and 3 Testcontainers
integration tests covering enabled/disabled/fail-fast paths.
Full suite stays at 276 / 0 / 0 / 0.

README expanded with Vault docs, the production hardening
section grew systemd + JVM tuning + SELinux guidance.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>